--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@types/node": "^13.13.4",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^25.5.0",
-    "eslint": "^6.8.0",
+    "eslint": "^8.6.0",
     "eslint-plugin-import": "^2.20.1",
-    "jest": "^25.5.0"
+    "jest": "^27.4.7"
   },
   "jest": {
     "modulePathIgnorePatterns": [
@@ -32,6 +32,5 @@
     "lint": "eslint .",
     "lint-test": "eslint . && jest --no-cache ./* "
   },
-  "license": "MIT",
-  "dependencies": {}
+  "license": "MIT"
 }
